...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="9SR-fH-ift" id="Zsi-th-40W"/>
                            <outlet property="delegate" destination="9SR-fH-ift" id="5aS-mz-mOo"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="What's On" id="nsP-l9-zTq">
                        <barButtonItem key="backBarButtonItem" title=" " id="bKh-sa-IpM"/>
                        <barButtonItem key="leftBarButtonItem" image="Search" id="tEr-l4-inT">
                            <connections>
                                <action selector="searchButton:" destination="9SR-fH-ift" id="EpF-jO-35e"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="Plus" id="muH-xL-jP5">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="iEj-e2-LUv" kind="presentation" id="MAv-1K-Etk"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                <color key="value" red="1" green="0.0" blue="0.3529411764705882" alpha="1" colorSpace="calibratedRGB"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <navigationItem key="navigationItem" title="POST AN EVENT" id="b8t-9w-21m">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="aYJ-dC-piv">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="cancel:" destination="8Do-5o-Mug" id="Lxs-dR-2EP"/>
                            </connections>
                        </barButtonItem>
...
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="SmP-I6-k4z"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Profile" id="oDQ-7V-80S">
                        <barButtonItem key="rightBarButtonItem" title="Logout" id="bk0-au-x4M">
                            <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <action selector="signOutButtonTapped:" destination="hpv-xz-z4f" id="kZx-fj-hQj"/>
                                <segue destination="qkb-xi-Otq" kind="presentation" modalTransitionStyle="coverVertical" id="KOf-ZH-9tI"/>
                            </connections>
...
                                            <constraint firstAttribute="height" constant="21" id="dYB-eC-dpr"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6fb-Rc-Mex">
                                        <rect key="frame" x="0.0" y="23" width="520" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="WtM-iQ-nbg"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" returnKeyType="next"/>
...
                                            <constraint firstAttribute="height" constant="21" id="B61-rh-yYs"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="F1u-I2-wfp">
                                        <rect key="frame" x="0.0" y="23" width="520" height="30"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="30" id="0NW-wL-KQl"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="go" secureTextEntry="YES"/>
...
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="40" id="5Vx-LW-PrI"/>
                                    <constraint firstAttribute="width" constant="250" id="tY3-dM-rhJ"/>
                                </constraints>
                                <color key="tintColor" red="1" green="0.0" blue="0.35294117650000001" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.98431372549019602" green="0.0" blue="0.28235294117647058" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="20"/>
                                    </userDefinedRuntimeAttribute>
...
